--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Página de Insider, influência inclusiva e criatividade">
-        <meta name="keywords" content="HTML, CSS, JavaScript, Bootstrap">
-        <meta name="author" content="Creators.llc">
-        <meta property="og:description" content="Página de Insider, influência inclusiva e criatividade" />
-        <meta property="og:image" content="https://creators.llc/images/share.jpg" />
-        <meta property="og:image:width" content="1200" />
-        <meta property="og:image:height" content="628" />
-        <link rel="stylesheet" href="style.css">
-        <link rel="shortcut icon" href="https://creators.llc/favicon.png">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-            crossorigin="anonymous"></script>
-        <script src="https://kit.fontawesome.com/e99973526a.js" crossorigin="anonymous"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        <title>Creators Insider</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Página de Insider, influência inclusiva e criatividade">
+    <meta name="keywords" content="HTML, CSS, JavaScript, Bootstrap">
+    <meta name="author" content="Creators.llc">
+    <meta property="og:description" content="Página de Insider, influência inclusiva e criatividade" />
+    <meta property="og:image" content="https://creators.llc/images/share.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="628" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="https://creators.llc/favicon.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/e99973526a.js" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <title>Creators Insider</title>
+</head>
 
 <body>
     <div class="container">
@@ -102,9 +102,12 @@
             <div class="row">
                 <div class="col-sm-8">
                     <div class="insider position-absolute">
-                        <img class="insider-creator-img" src="assets/header/insidercreator.png" alt="" aria-hidden="true">
+                        <img class="insider-creator-img" src="assets/header/insidercreator.png" alt=""
+                            aria-hidden="true">
                         <div class="info-first">
-                            <h1 class="influ-title" style="font-size: 60px; font-weight: 500">Influência <br> <span>inclusiva & <br> criatividade</span></h1>
+                            <h1 class="influ-title" style="font-size: 60px; font-weight: 500">Influência <br>
+                                <span>inclusiva & <br> criatividade</span>
+                            </h1>
                             <div class="transmission d-flex">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"
                                     fill="none">
@@ -143,7 +146,7 @@
                         </div>
                     </div>
                     <div class="card-creators">
-                        <img src="assets/header/card.png" alt=""  aria-hidden="true">
+                        <img src="assets/header/card.png" alt="" aria-hidden="true">
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -215,7 +218,8 @@
         <div class="container space-paragraph section-2" style="margin-top: 150px">
             <h3>06.10 | 13h</h3>
             <div class="info-first mt-4">
-                <h1 class="influ-title" style="font-size: 60px; font-weight: 500">INFLUÊNCIA <br> <span>INCLUSIVA</span></h1>
+                <h1 class="influ-title" style="font-size: 60px; font-weight: 500">INFLUÊNCIA <br> <span>INCLUSIVA</span>
+                </h1>
                 <h2 class="mt-4">Como desenvolver estratégias <br>
                     de marketing de influência inclusivas</h2>
                 <p class="mt-4">
@@ -234,32 +238,37 @@
             <div class="container">
                 <div class="row justify-content-around ">
                     <div class="col-md card-host">
-                        <img src="assets/main/nohoa.jpg" alt=""  aria-hidden="true">
+                        <img src="assets/main/nohoa.jpg" alt="" aria-hidden="true">
                         <h1 class="names">
                             <span> Host </span>Nohoa Arcanjo <br>
 
                         </h1>
                         <p>
-                            Co-Founder & Growth Leader na <span style="font-weight: 800"><a href="https://creators.llc/">Creators LLC</a></span>
+                            Co-Founder & Growth Leader na <span style="font-weight: 800"><a
+                                    href="https://creators.llc/">Creators LLC</a></span>
                         </p>
                     </div>
 
                     <div class="col-md card-host">
-                        <img src="assets/main/pedro_cruz.jpg" alt=""  aria-hidden="true">
+                        <img src="assets/main/pedro_cruz.jpg" alt="" aria-hidden="true">
                         <h1 class="names">Pedro Cruz 🏳️‍🌈</h1>
                         <p> LinkedIn Top Voice e Colunista na <span style="font-weight: 800">Fast Company</span></p>
                     </div>
                     <div class="col-md card-host">
-                        <img src="assets/main/nanna.jpg" alt=""  aria-hidden="true">
+                        <img src="assets/main/nanna.jpg" alt="" aria-hidden="true">
                         <h1 class="names">Nanna Pretto</h1>
-                        <p> Creator <span style="font-weight: 800"><a href="https://www.instagram.com/dica_de_mae/">@dica_de_mae</a></span> & Influence Marketing Manager no
-                            <span style="font-weight: 800">Nubank</span></p>
+                        <p> Creator <span style="font-weight: 800"><a
+                                    href="https://www.instagram.com/dica_de_mae/">@dica_de_mae</a></span> & Influence
+                            Marketing Manager no
+                            <span style="font-weight: 800">Nubank</span>
+                        </p>
 
                     </div>
                     <div class="col-md card-host">
-                        <img src="assets/main/stella.png" alt=""  aria-hidden="true">
+                        <img src="assets/main/stella.png" alt="" aria-hidden="true">
                         <h1 class="names">Stella Yeshua</h1>
-                        <p>Creator <a href="https://www.instagram.com/stella.yeshua/"></a><span style="font-weight: 800">@stella.yeshua e Rapper </span></p>
+                        <p>Creator <a href="https://www.instagram.com/stella.yeshua/"></a><span
+                                style="font-weight: 800">@stella.yeshua e Rapper </span></p>
                     </div>
                 </div>
             </div>
@@ -269,7 +278,8 @@
         <div class="container section-2 space-paragraph">
             <h3>06.10 | 15h</h3>
             <div class="info-first mt-4">
-                <h1 class="influ-title" style="font-size: 60px; font-weight: 500">CRIATIVIDADE PARA <br> <span>ENVOLVER </span></h1>
+                <h1 class="influ-title" style="font-size: 60px; font-weight: 500">CRIATIVIDADE PARA <br> <span>ENVOLVER
+                    </span></h1>
                 <h2 class="mt-4">Como usar a criatividade pra <br>
                     envolver a comunidade no TikTok</h2>
                 <p class="mt-4">
@@ -286,7 +296,7 @@
                 <h2 class="my-5 tittle" style="padding-bottom: 30px">Conheça a participante</h2>
 
                 <div class="col-md-3 card-host m-0 pb-5">
-                    <img src="assets/main/dindi.jfif" alt=""  aria-hidden="true">
+                    <img src="assets/main/dindi.jfif" alt="" aria-hidden="true">
                     <h1 class="names">
                         Dindi Coelho 🏳️‍🌈 <br>
                         <a href="https://www.tiktok.com/@dindicoelho" target="_blank">@dindicoelho</a>
@@ -306,11 +316,11 @@
                     <p class="color-paragraph">Conectamos criadores com marcas que desejam escalar sua comunicação e
                         criar conversas com suas comunidades.
                     </p>
-                    <button class="btn btn-subscribe" type="button"><a href="https://creators.llc/"
-                            target="_blank">Faça seu cadastro</a></button>
+                    <button class="btn btn-subscribe" type="button"><a href="https://creators.llc/" target="_blank">Faça
+                            seu cadastro</a></button>
                 </div>
                 <div class="col-md-8 teste">
-                    <img src="assets/main/insidercreators2nd.svg" alt=""  aria-hidden="true">
+                    <img src="assets/main/insidercreators2nd.svg" alt="" aria-hidden="true">
                 </div>
             </div>
 
@@ -401,10 +411,10 @@
                                 MARKETING PLATFORM</h3>
                         </a>
                         <div class="list-terms">
-                                <div class="row">
-                                    <div class="col-md-3 mb-4">
-                                        <a href="mailto:hello@creators.llc" target="_blank">hello@creators.llc</a>
-                                    </div>
+                            <div class="row">
+                                <div class="col-md-3 mb-4">
+                                    <a href="mailto:hello@creators.llc" target="_blank">hello@creators.llc</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -422,6 +432,16 @@
                             <li class="d-inline-block me-2">
                                 <a href="https://www.facebook.com/creators.llc/" target="_blank"><img
                                         src="assets/facebook.svg" alt="logo facebook"></a>
+                            </li>
+
+                            <li class="d-inline-block me-2">
+                                <a href="https://www.tiktok.com/@creators.llc" target="_blank"><img
+                                        src="assets/footer/tiktok.svg" alt="logo tiktok"></a>
+                            </li>
+
+                            <li class="d-inline-block me-2">
+                                <a href="https://www.youtube.com/@creatorsllc" target="_blank"><img
+                                        src="assets/footer/youtube.svg" alt="logo Youtube"></a>
                             </li>
                         </ul>
                     </div>
