--- a/obrigado.html
+++ b/obrigado.html
@@ -102,7 +102,8 @@
             <div class="row">
                 <div class="col-sm-8">
                     <div class="insider position-absolute">
-                        <img class="insider-creator-img" src="assets/header/insidercreator.png" alt=""  aria-hidden="true">
+                        <img class="insider-creator-img" src="assets/header/insidercreator.png" alt=""
+                            aria-hidden="true">
                         <div class="info-first">
                             <h1 class="influ-title" style="font-size: 60px; font-weight: 500">Influência <br>
                                 <span>inclusiva & <br> criatividade</span>
@@ -145,7 +146,7 @@
                         </div>
                     </div>
                     <div class="card-creators">
-                        <img src="assets/header/card.png" alt=""  aria-hidden="true">
+                        <img src="assets/header/card.png" alt="" aria-hidden="true">
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -193,7 +194,7 @@
             <div class="container">
                 <div class="row justify-content-around ">
                     <div class="col-md card-host">
-                        <img src="assets/main/nohoa.jpg" alt=""  aria-hidden="true">
+                        <img src="assets/main/nohoa.jpg" alt="" aria-hidden="true">
                         <h1 class="names">
                             <span> Host </span>Nohoa Arcanjo <br>
 
@@ -205,12 +206,12 @@
                     </div>
 
                     <div class="col-md card-host">
-                        <img src="assets/main/pedro_cruz.jpg" alt=""  aria-hidden="true">
+                        <img src="assets/main/pedro_cruz.jpg" alt="" aria-hidden="true">
                         <h1 class="names">Pedro Cruz 🏳️‍🌈</h1>
                         <p> LinkedIn Top Voice e Colunista na <span style="font-weight: 800">Fast Company</span></p>
                     </div>
                     <div class="col-md card-host">
-                        <img src="assets/main/nanna.jpg" alt=""  aria-hidden="true">
+                        <img src="assets/main/nanna.jpg" alt="" aria-hidden="true">
                         <h1 class="names">Nanna Pretto</h1>
                         <p> Creator <span style="font-weight: 800"><a
                                     href="https://www.instagram.com/dica_de_mae/">@dica_de_mae</a></span> & Influence
@@ -220,7 +221,7 @@
 
                     </div>
                     <div class="col-md card-host">
-                        <img src="assets/main/stella.png" alt=""  aria-hidden="true">
+                        <img src="assets/main/stella.png" alt="" aria-hidden="true">
                         <h1 class="names">Stella Yeshua</h1>
                         <p>Creator <a href="https://www.instagram.com/stella.yeshua/"></a><span
                                 style="font-weight: 800">@stella.yeshua e Rapper</span></p>
@@ -251,7 +252,7 @@
                 <h2 class="my-5 tittle" style="padding-bottom: 30px">Conheça a participante</h2>
 
                 <div class="col-md-3 card-host m-0 pb-5">
-                    <img src="assets/main/dindi.jfif" alt=""  aria-hidden="true">
+                    <img src="assets/main/dindi.jfif" alt="" aria-hidden="true">
                     <h1 class="names">
                         Dindi Coelho 🏳️‍🌈 <br>
                         <a href="https://www.tiktok.com/@dindicoelho" target="_blank">@dindicoelho</a>
@@ -275,7 +276,7 @@
                             seu cadastro</a></button>
                 </div>
                 <div class="col-md-8 teste">
-                    <img src="assets/main/insidercreators2nd.svg" alt=""  aria-hidden="true">
+                    <img src="assets/main/insidercreators2nd.svg" alt="" aria-hidden="true">
                 </div>
             </div>
 
@@ -390,6 +391,15 @@
                                 <a href="https://www.facebook.com/creators.llc/" target="_blank"
                                     aria-label="ir a página oficial da Creators.llc no Facebook"><img
                                         src="assets/facebook.svg" alt="logo facebook"></a>
+                            </li>
+                            <li class="d-inline-block me-2">
+                                <a href="https://www.tiktok.com/@creators.llc" target="_blank"><img
+                                        src="assets/footer/tiktok.svg" alt="logo tiktok"></a>
+                            </li>
+
+                            <li class="d-inline-block me-2">
+                                <a href="https://www.youtube.com/@creatorsllc" target="_blank"><img
+                                        src="assets/footer/youtube.svg" alt="logo Youtube"></a>
                             </li>
                         </ul>
                     </div>
